# SSPME

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  __init__.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
sspm_engine/: API_DOCUMENTATION.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  SECURITY.md  __init__.py  docker-compose.yml  engine.py  logging_config.py  models.py  pyproject.toml  setup.py
sspm_engine/analytics/: risk_engine.py  scoring.py
sspm_engine/api/: server.py
sspm_engine/cli/: sspmctl.py
sspm_engine/config/: risk_rules.json
sspm_engine/docs/: architecture.md  contributing.md  license.md
sspm_engine/examples/: mock_github.json  mock_gw.json  mock_slack.json
sspm_engine/integrations/: base.py  github.py  google_workspace.py  slack.py
sspm_engine/reporting/: reporter.py
sspm_engine/reporting/templates/: report.md.j2
sspm_engine/scanners/: base.py  external_access.py  misconfig.py  permissions.py  secret_scanner.py
sspm_engine/sspm_engine/: __init__.py  engine.py  logging_config.py  models.py
sspm_engine/sspm_engine/analytics/: risk_engine.py  scoring.py
sspm_engine/sspm_engine/api/: server.py
sspm_engine/sspm_engine/cli/: sspmctl.py
sspm_engine/sspm_engine/config/: settings.yaml
sspm_engine/sspm_engine/integrations/: base.py  github.py  google_workspace.py  slack.py
sspm_engine/sspm_engine/reporting/: reporter.py
sspm_engine/tests/: __init__.py  test_permissions.py  test_risk_engine.py
(+26 files in other folders)
