[tool.poetry]
name = "sspm-engine"
version = "1.0.0"
description = "SaaS Security Posture Management Engine"
authors = ["SSPM Builder <builder@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "sspm_engine", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
typer = "^0.4.0"
pyyaml = "^5.4.1"
jinja2 = "^3.0.0"
requests = "^2.26.0"
pydantic = "^1.8.2"
slack-sdk = "^3.11.0"
PyGithub = "^1.55"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.0"
python-dotenv = "^0.19.0"
rich = "^10.0.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.0"
isort = "^5.0"
mypy = "^0.910"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

